fix routes in swagger
